<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_app_bg"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtInfo"
            style="@style/UITextView"
            android:gravity="center_horizontal"
            android:padding="@dimen/size_5"
            android:text="@string/forgot_password_info"
            android:layout_gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            style="@style/UIEditText"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/size_24"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPassword"
            style="@style/UIButton"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/reset_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtRememberPassword"
            style="@style/UITextView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_16"
            android:padding="@dimen/size_5"
            android:text="@string/remembered_password_login_here" />

    </LinearLayout>

</FrameLayout>