<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_app_bg"
    android:clickable="true"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/lnrNavigationControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnAward"
            style="@style/UIHomeImageButton"
            android:src="@drawable/ic_home_award"
            android:tint="@color/golden" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnInvitation"
            style="@style/UIHomeImageButton"
            android:layout_marginTop="@dimen/size_3"
            android:src="@drawable/ic_home_invitation"
            android:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnSettings"
            style="@style/UIHomeImageButton"
            android:layout_marginTop="@dimen/size_3"
            android:src="@drawable/ic_home_settings"
            android:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnProfile"
            style="@style/UIHomeImageButton"
            android:layout_marginTop="@dimen/size_3"
            android:padding="@dimen/size_1"
            android:src="@drawable/ic_home_profile"
            android:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnLogout"
            style="@style/UIHomeImageButton"
            android:layout_marginTop="@dimen/size_3"
            android:src="@drawable/ic_home_logout"
            android:tint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrAwardStatusBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@color/black_alpha_60"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBeeAward"
            android:layout_width="@dimen/size_60"
            android:layout_height="@dimen/size_60"
            android:background="@drawable/view_user_border_golden"
            android:padding="@dimen/size_5" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBeeWin"
            style="@style/BeeResultStatusIcon"
            android:layout_marginTop="@dimen/size_10"
            android:src="@drawable/ic_game_win" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTotalWin"
            style="@style/BeeResultStatusText"
            android:text="10" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBeeLost"
            style="@style/BeeResultStatusIcon"
            android:layout_marginTop="@dimen/size_10"
            android:src="@drawable/ic_game_lost" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTotalLoose"
            style="@style/BeeResultStatusText"
            android:text="10" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBeeDraw"
            style="@style/BeeResultStatusIcon"
            android:layout_marginTop="@dimen/size_10"
            android:padding="@dimen/size_7"
            android:src="@drawable/ic_game_draw" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTotalDraw"
            style="@style/BeeResultStatusText"
            android:layout_marginBottom="@dimen/size_10"
            android:text="10" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/lnrNavigationControl"
        android:layout_toRightOf="@+id/lnrAwardStatusBar"
        android:padding="@dimen/size_16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPlayWithUser"
                style="@style/UIHomeText"
                android:layout_width="@dimen/size_400"
                android:layout_height="@dimen/size_55"
                android:background="@drawable/ic_play_option_1"
                android:text="@string/play_with_bee"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPlayWithApp"
                style="@style/UIHomeText"
                android:text="@string/play_with_app"
                android:layout_width="@dimen/size_400"
                android:layout_height="@dimen/size_55"
                android:background="@drawable/ic_play_option_2"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/size_30"
                android:layout_marginBottom="@dimen/size_30"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPlayAlone"
                style="@style/UIHomeText"
                android:text="@string/play_alone"
                android:layout_width="@dimen/size_400"
                android:layout_height="@dimen/size_55"
                android:background="@drawable/ic_play_option_1"
                android:textColor="@color/black"/>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>